libs/librknn_api/include/rknn_api.h


typedef enum _rknn_tensor_type {
    RKNN_TENSOR_FLOAT32 = 0,                            
    RKNN_TENSOR_FLOAT16,                                
    RKNN_TENSOR_INT8,                                   
    RKNN_TENSOR_UINT8,                                  
    RKNN_TENSOR_INT16,                                  
    RKNN_TENSOR_UINT16,                                 
    RKNN_TENSOR_INT32,                                  
    RKNN_TENSOR_UINT32,                                 
    RKNN_TENSOR_INT64,                                  
    RKNN_TENSOR_BOOL,
    RKNN_TENSOR_INT4,
    RKNN_TENSOR_TYPE_MAX
} rknn_tensor_type;
typedef enum _rknn_core_mask {
    RKNN_NPU_CORE_AUTO = 0,                                       
    RKNN_NPU_CORE_0 = 1,                                          
    RKNN_NPU_CORE_1 = 2,                                          
    RKNN_NPU_CORE_2 = 4,                                          
    RKNN_NPU_CORE_0_1 = RKNN_NPU_CORE_0 | RKNN_NPU_CORE_1,        
    RKNN_NPU_CORE_0_1_2 = RKNN_NPU_CORE_0_1 | RKNN_NPU_CORE_2,    
    RKNN_NPU_CORE_UNDEFINED,
} rknn_core_mask;
typedef struct _rknn_tensor_memory {
    void*            virt_addr;                         
    uint64_t         phys_addr;                         
    int32_t          fd;                                
    int32_t          offset;                            
    uint32_t         size;                              
    uint32_t         flags;                             
    void *           priv_data;                         
} rknn_tensor_mem;