libs/librknn_api/include/rknn_matmul_api.h

typedef rknn_context rknn_matmul_ctx;
typedef struct _rknn_quant_params
{
  char name[RKNN_MAX_NAME_LEN];
  float* scale;
  int    scale_len;
  int32_t* zp;
  int      zp_len;
} rknn_quant_params;
typedef enum _rknn_matmul_type
{
  RKNN_FLOAT16_MM_FLOAT16_TO_FLOAT32 = 1,
  RKNN_INT8_MM_INT8_TO_INT32         = 2,
  RKNN_INT8_MM_INT8_TO_INT8          = 3,
  RKNN_FLOAT16_MM_FLOAT16_TO_FLOAT16 = 4,
  RKNN_FLOAT16_MM_INT8_TO_FLOAT32    = 5,
  RKNN_FLOAT16_MM_INT8_TO_FLOAT16    = 6,
  RKNN_FLOAT16_MM_INT4_TO_FLOAT32    = 7,
  RKNN_FLOAT16_MM_INT4_TO_FLOAT16    = 8,
  RKNN_INT4_MM_INT4_TO_INT16         = 10,
  RKNN_INT8_MM_INT4_TO_INT32         = 11,
} rknn_matmul_type;
typedef struct _rknn_matmul_tensor_attr
{
  char name[RKNN_MAX_NAME_LEN];
  uint32_t n_dims;
  uint32_t dims[RKNN_MAX_DIMS];
  uint32_t size;
  rknn_tensor_type type;
} rknn_matmul_tensor_attr;
typedef struct _rknn_matmul_io_attr
{
  rknn_matmul_tensor_attr A;
  rknn_matmul_tensor_attr B;
  rknn_matmul_tensor_attr C;
} rknn_matmul_io_attr;
typedef struct _rknn_matmul_shape
{
  int32_t M;
  int32_t K;
  int32_t N;
} rknn_matmul_shape;
typedef struct rknn_matmul_info_t
{
  int32_t M;
  int32_t K; 
  int32_t N; 
  rknn_matmul_type type;
  int16_t B_layout;
  int16_t B_quant_type;
  int16_t AC_layout;
  int16_t AC_quant_type;
  int32_t iommu_domain_id;
  int8_t reserved[36];
} rknn_matmul_info;
int rknn_matmul_create(rknn_matmul_ctx* ctx, rknn_matmul_info* info, rknn_matmul_io_attr* io_attr);
int rknn_matmul_create_dyn_shape(rknn_matmul_ctx* ctx, rknn_matmul_info* info, int shape_num,
                                 rknn_matmul_shape dynamic_shapes[], rknn_matmul_io_attr io_attrs[]);
int rknn_matmul_set_io_mem(rknn_matmul_ctx ctx, rknn_tensor_mem* mem, rknn_matmul_tensor_attr* attr);
int rknn_matmul_set_core_mask(rknn_matmul_ctx context, rknn_core_mask core_mask);
int rknn_matmul_set_quant_params(rknn_matmul_ctx context, rknn_quant_params* params);
int rknn_matmul_get_quant_params(rknn_matmul_ctx ctx, rknn_quant_params* params, float* scale);
int rknn_matmul_set_dynamic_shape(rknn_matmul_ctx ctx, rknn_matmul_shape* shape);
int rknn_matmul_run(rknn_matmul_ctx ctx);
int rknn_matmul_destroy(rknn_matmul_ctx ctx);
int rknn_B_normal_layout_to_native_layout(void* B_input, void* B_output, int K, int N, int subN, int subK, rknn_matmul_type type);