src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_quant_params"][::std::mem::size_of::<_rknn_quant_params>() - 288usize];
    ["Alignment of _rknn_quant_params"][::std::mem::align_of::<_rknn_quant_params>() - 8usize];
    ["Offset of field: _rknn_quant_params::name"]
        [::std::mem::offset_of!(_rknn_quant_params, name) - 0usize];
    ["Offset of field: _rknn_quant_params::scale"]
        [::std::mem::offset_of!(_rknn_quant_params, scale) - 256usize];
    ["Offset of field: _rknn_quant_params::scale_len"]
        [::std::mem::offset_of!(_rknn_quant_params, scale_len) - 264usize];
    ["Offset of field: _rknn_quant_params::zp"]
        [::std::mem::offset_of!(_rknn_quant_params, zp) - 272usize];
    ["Offset of field: _rknn_quant_params::zp_len"]
        [::std::mem::offset_of!(_rknn_quant_params, zp_len) - 280usize];
};
pub type rknn_quant_params = _rknn_quant_params;
pub const _rknn_matmul_type_RKNN_FLOAT16_MM_FLOAT16_TO_FLOAT32: _rknn_matmul_type = 1;
pub const _rknn_matmul_type_RKNN_INT8_MM_INT8_TO_INT32: _rknn_matmul_type = 2;
pub const _rknn_matmul_type_RKNN_INT8_MM_INT8_TO_INT8: _rknn_matmul_type = 3;
pub const _rknn_matmul_type_RKNN_FLOAT16_MM_FLOAT16_TO_FLOAT16: _rknn_matmul_type = 4;
pub const _rknn_matmul_type_RKNN_FLOAT16_MM_INT8_TO_FLOAT32: _rknn_matmul_type = 5;
pub const _rknn_matmul_type_RKNN_FLOAT16_MM_INT8_TO_FLOAT16: _rknn_matmul_type = 6;
pub const _rknn_matmul_type_RKNN_FLOAT16_MM_INT4_TO_FLOAT32: _rknn_matmul_type = 7;
pub const _rknn_matmul_type_RKNN_FLOAT16_MM_INT4_TO_FLOAT16: _rknn_matmul_type = 8;
pub const _rknn_matmul_type_RKNN_INT4_MM_INT4_TO_INT16: _rknn_matmul_type = 10;
pub const _rknn_matmul_type_RKNN_INT8_MM_INT4_TO_INT32: _rknn_matmul_type = 11;
pub type _rknn_matmul_type = ::std::os::raw::c_uint;
pub use self::_rknn_matmul_type as rknn_matmul_type;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_matmul_tensor_attr {
    pub name: [::std::os::raw::c_char; 256usize],
    pub n_dims: u32,
    pub dims: [u32; 16usize],
    pub size: u32,
    pub type_: rknn_tensor_type,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_matmul_tensor_attr"]
        [::std::mem::size_of::<_rknn_matmul_tensor_attr>() - 332usize];
    ["Alignment of _rknn_matmul_tensor_attr"]
        [::std::mem::align_of::<_rknn_matmul_tensor_attr>() - 4usize];
    ["Offset of field: _rknn_matmul_tensor_attr::name"]
        [::std::mem::offset_of!(_rknn_matmul_tensor_attr, name) - 0usize];
    ["Offset of field: _rknn_matmul_tensor_attr::n_dims"]
        [::std::mem::offset_of!(_rknn_matmul_tensor_attr, n_dims) - 256usize];
    ["Offset of field: _rknn_matmul_tensor_attr::dims"]
        [::std::mem::offset_of!(_rknn_matmul_tensor_attr, dims) - 260usize];
    ["Offset of field: _rknn_matmul_tensor_attr::size"]
        [::std::mem::offset_of!(_rknn_matmul_tensor_attr, size) - 324usize];
    ["Offset of field: _rknn_matmul_tensor_attr::type_"]
        [::std::mem::offset_of!(_rknn_matmul_tensor_attr, type_) - 328usize];
};
pub type rknn_matmul_tensor_attr = _rknn_matmul_tensor_attr;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_matmul_io_attr {
    pub A: rknn_matmul_tensor_attr,
    pub B: rknn_matmul_tensor_attr,
    pub C: rknn_matmul_tensor_attr,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_matmul_io_attr"][::std::mem::size_of::<_rknn_matmul_io_attr>() - 996usize];
    ["Alignment of _rknn_matmul_io_attr"][::std::mem::align_of::<_rknn_matmul_io_attr>() - 4usize];
    ["Offset of field: _rknn_matmul_io_attr::A"]
        [::std::mem::offset_of!(_rknn_matmul_io_attr, A) - 0usize];
    ["Offset of field: _rknn_matmul_io_attr::B"]
        [::std::mem::offset_of!(_rknn_matmul_io_attr, B) - 332usize];
    ["Offset of field: _rknn_matmul_io_attr::C"]
        [::std::mem::offset_of!(_rknn_matmul_io_attr, C) - 664usize];
};
pub type rknn_matmul_io_attr = _rknn_matmul_io_attr;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_matmul_shape {
    pub M: i32,
    pub K: i32,
    pub N: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_matmul_shape"][::std::mem::size_of::<_rknn_matmul_shape>() - 12usize];
    ["Alignment of _rknn_matmul_shape"][::std::mem::align_of::<_rknn_matmul_shape>() - 4usize];
    ["Offset of field: _rknn_matmul_shape::M"]
        [::std::mem::offset_of!(_rknn_matmul_shape, M) - 0usize];
    ["Offset of field: _rknn_matmul_shape::K"]
        [::std::mem::offset_of!(_rknn_matmul_shape, K) - 4usize];
    ["Offset of field: _rknn_matmul_shape::N"]
        [::std::mem::offset_of!(_rknn_matmul_shape, N) - 8usize];
};
pub type rknn_matmul_shape = _rknn_matmul_shape;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rknn_matmul_info_t {
    pub M: i32,
    pub K: i32,
    pub N: i32,
    pub type_: rknn_matmul_type,
    pub B_layout: i16,
    pub B_quant_type: i16,
    pub AC_layout: i16,
    pub AC_quant_type: i16,
    pub iommu_domain_id: i32,
    pub reserved: [i8; 36usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of rknn_matmul_info_t"][::std::mem::size_of::<rknn_matmul_info_t>() - 64usize];
    ["Alignment of rknn_matmul_info_t"][::std::mem::align_of::<rknn_matmul_info_t>() - 4usize];
    ["Offset of field: rknn_matmul_info_t::M"]
        [::std::mem::offset_of!(rknn_matmul_info_t, M) - 0usize];
    ["Offset of field: rknn_matmul_info_t::K"]
        [::std::mem::offset_of!(rknn_matmul_info_t, K) - 4usize];
    ["Offset of field: rknn_matmul_info_t::N"]
        [::std::mem::offset_of!(rknn_matmul_info_t, N) - 8usize];
    ["Offset of field: rknn_matmul_info_t::type_"]
        [::std::mem::offset_of!(rknn_matmul_info_t, type_) - 12usize];
    ["Offset of field: rknn_matmul_info_t::B_layout"]
        [::std::mem::offset_of!(rknn_matmul_info_t, B_layout) - 16usize];
    ["Offset of field: rknn_matmul_info_t::B_quant_type"]
        [::std::mem::offset_of!(rknn_matmul_info_t, B_quant_type) - 18usize];
    ["Offset of field: rknn_matmul_info_t::AC_layout"]
        [::std::mem::offset_of!(rknn_matmul_info_t, AC_layout) - 20usize];
    ["Offset of field: rknn_matmul_info_t::AC_quant_type"]
        [::std::mem::offset_of!(rknn_matmul_info_t, AC_quant_type) - 22usize];
    ["Offset of field: rknn_matmul_info_t::iommu_domain_id"]
        [::std::mem::offset_of!(rknn_matmul_info_t, iommu_domain_id) - 24usize];
    ["Offset of field: rknn_matmul_info_t::reserved"]
        [::std::mem::offset_of!(rknn_matmul_info_t, reserved) - 28usize];
};
pub type rknn_matmul_info = rknn_matmul_info_t;
unsafe extern "C" {
    pub fn rknn_matmul_create(
        ctx: *mut rknn_matmul_ctx,
        info: *mut rknn_matmul_info,
        io_attr: *mut rknn_matmul_io_attr,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_matmul_create_dyn_shape(
        ctx: *mut rknn_matmul_ctx,
        info: *mut rknn_matmul_info,
        shape_num: ::std::os::raw::c_int,
        dynamic_shapes: *mut rknn_matmul_shape,
        io_attrs: *mut rknn_matmul_io_attr,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_matmul_set_io_mem(
        ctx: rknn_matmul_ctx,
        mem: *mut rknn_tensor_mem,
        attr: *mut rknn_matmul_tensor_attr,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_matmul_set_core_mask(
        context: rknn_matmul_ctx,
        core_mask: rknn_core_mask,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_matmul_set_quant_params(
        context: rknn_matmul_ctx,
        params: *mut rknn_quant_params,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_matmul_get_quant_params(
        ctx: rknn_matmul_ctx,
        params: *mut rknn_quant_params,
        scale: *mut f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_matmul_set_dynamic_shape(
        ctx: rknn_matmul_ctx,
        shape: *mut rknn_matmul_shape,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_matmul_run(ctx: rknn_matmul_ctx) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_matmul_destroy(ctx: rknn_matmul_ctx) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_B_normal_layout_to_native_layout(
        B_input: *mut ::std::os::raw::c_void,
        B_output: *mut ::std::os::raw::c_void,
        K: ::std::os::raw::c_int,
        N: ::std::os::raw::c_int,
        subN: ::std::os::raw::c_int,
        subK: ::std::os::raw::c_int,
        type_: rknn_matmul_type,
    ) -> ::std::os::raw::c_int;
}
